--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             const submitButton = document.getElementById('submitButton');
             const image = document.getElementById('image');
             const errorMessage = document.getElementById('errorMessage');
-            const targetString = "メディカルチェッカーは見事な輝きを放ち、衛生局、医学公爵は病気の根源を断ち切った。野菜の名前はレバノン。";
+            const targetString = "メディカルチェッカーは見事に輝きを放ち、衛生局、医学公爵は病気の根源を断ち切った。野菜の名前はレバノン。";
 
             if (inputBox.value === targetString) {
                 image.style.display = 'block';
