--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             } else {
                 image.style.display = 'none';
                 errorMessage.style.display = 'block';
+                inputBox.value = '';
             }
         }
     </script>
