--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container">
         <img id="image" src="image/certificate.png" alt="certificate">
         <div>
-            <input type="text" id="inputBox" placeholder="入力してください">
+            <input oncopy="return false" onpaste="return false" oncontextmenu="return false" type="text" id="inputBox" placeholder="入力してください">
             <button id="submitButton" onclick="checkInput()">決定</button>
         </div>
     </div>
