--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         #image {
             display: none;
             margin: 20px 0;
-            max-width: 400px;
+            max-width: 700px;
             height: auto;
         }
         #congratsMessage {
@@ -85,6 +85,19 @@
     <div id="errorMessage">入力が正しくありません</div>
 
     <script>
+        let lastLength = 0;
+
+        const intervalId = window.setInterval(function() {
+            const inputBox = document.getElementById('inputBox');
+            const currentLength = inputBox.value.length;
+
+            if (currentLength - lastLength >= 10) {
+                inputBox.value = '';
+            }
+
+            lastLength = currentLength;
+        }, 1);
+
         function checkInput() {
             const inputBox = document.getElementById('inputBox');
             const submitButton = document.getElementById('submitButton');
